[gd_scene load_steps=5 format=3 uid="uid://bfu0yrdm2g5rn"]

[ext_resource type="PackedScene" uid="uid://cc0ktflb7apif" path="res://scenes/platform.tscn" id="1_q4aaf"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_wjvx8"]
[ext_resource type="PackedScene" uid="uid://0uvt765rsbyn" path="res://scenes/player.tscn" id="2_gpf06"]
[ext_resource type="Texture2D" uid="uid://cq2fw13pduypv" path="res://assets/texture/background_layer_3.png" id="2_lr7oj"]

[node name="Main" type="Node2D"]
script = ExtResource("1_wjvx8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(720.5, 192.5)
scale = Vector2(4.50313, 4.20555)
texture = ExtResource("2_lr7oj")

[node name="Platform" parent="." instance=ExtResource("1_q4aaf")]
position = Vector2(-290, 554)

[node name="Player" parent="." instance=ExtResource("2_gpf06")]
position = Vector2(174, 350)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelMonstro" type="Label" parent="CanvasLayer"]
offset_left = 297.0
offset_top = 154.0
offset_right = 337.0
offset_bottom = 177.0

[node name="LabelAndar" type="Label" parent="CanvasLayer"]
offset_left = 397.0
offset_top = 55.0
offset_right = 437.0
offset_bottom = 78.0

[node name="LabelMoedas" type="Label" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 49.0
offset_right = 56.0
offset_bottom = 72.0

[node name="LojaContainer" type="HBoxContainer" parent="CanvasLayer"]
layout_direction = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -150.0
offset_right = 186.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="ButtonComprarVelocidade" type="Button" parent="CanvasLayer/LojaContainer"]
layout_mode = 2
text = "+Vel. Ataque
15 Moedas"

[node name="ButtonComprarDano" type="Button" parent="CanvasLayer/LojaContainer"]
layout_mode = 2
text = "+1 Dano
10 Moedas"

[node name="ButtonComprarCritico" type="Button" parent="CanvasLayer/LojaContainer"]
layout_mode = 2
text = "+Crítico
20 Moedas"

[node name="ButtonAvancar" type="Button" parent="CanvasLayer/LojaContainer"]
layout_mode = 2
text = "Avançar"
